LC-max-stack [Runtime: 64 ms; Memory: 104.3 MB]